# pi-ku

./: .env.e2e.example  .env.example  .gitignore  README.md  biome.json  docker-compose.e2e.yml  docker-compose.prod.yml  docker-compose.yml  lefthook.yml
.forgejo/workflows/: ci.yml
.github/workflows/: ci.yml
backend/: .gitignore  Dockerfile  pyproject.toml  requirements.txt
backend/config/: logging.py  settings.py  urls.py
backend/letters/: apps.py  models.py  serializers.py  tasks.py  tests.py  urls.py  views.py
backend/letters/migrations/: 0001_initial.py  0002_letter_encrypted_content_letter_encrypted_metadata.py  0003_letter_unlock_at.py  0004_letter_burned_at_letter_opened_at_letter_sealed_at.py  0005_letter_encrypted_dek.py  0006_letterimage.py  0007_alter_letter_public_id.py  0008_letter_notified_at.py  0009_alter_letter_notified_at_alter_letter_unlock_at.py
backend/scripts/management/commands/: serve.py
backend/templates/email/: activation.html  activation.txt  base.html  vault_unlock.html  vault_unlock.txt
backend/users/: models.py  serializers.py  tests.py  urls.py  utils.py  views.py
backend/users/migrations/: 0001_initial.py  0002_user_kdf_salt_alter_user_is_active.py  0003_user_public_id.py  0004_alter_user_public_id.py  0005_remove_user_kdf_salt.py
frontend/: .dockerignore  .gitignore  Dockerfile  index.html  nginx.conf  package.json  playwright.config.ts  repomix-output.xml  vite.config.ts  vitest.config.ts
frontend/e2e/: auth.spec.ts  letter.spec.ts
frontend/e2e/utils/: auth.ts  envelope.ts  mailpit.ts
frontend/public/: site.webmanifest
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: apiClient.test.ts  apiClient.ts  response.ts
frontend/src/components/: Logo.tsx  RouteGuards.test.tsx  RouteGuards.tsx  SplashScreen.tsx
frontend/src/config/: endpoints.ts  routes.ts  welcomeLetter.ts
frontend/src/hooks/: useAuth.test.ts  useAuth.ts  useLetters.test.ts  useLetters.tsx
frontend/src/pages/: About.tsx  Activate.tsx  Drawer.test.tsx  Drawer.tsx  Editor.test.tsx  Editor.tsx  Home.tsx  Login.test.tsx  Login.tsx  Reader.test.tsx  Reader.tsx  Register.tsx  VerifyEmail.tsx
frontend/src/store/: useAuth.ts  useAuthStore.ts  useKeyStore.ts
frontend/test/: setup.ts
frontend/utils/: url-builder.ts
scripts/: run-e2e.sh  setup.sh  start.sh
(+37 files in other folders)
