[project]
name = "piku_backend"
version = "0.1.0"
description = "Django Rest Framework for handling requests for Pi Ku app"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "django>=6.0.4",
    "django-cors-headers>=4.9.0",
    "django-environ>=0.13.0",
    "django-extensions>=4.1",
    "djangorestframework>=3.17.1",
    "djangorestframework-simplejwt>=5.5.1",
    "psycopg2-binary>=2.9.11",
    "pyopenssl>=26.0.0",
    "ruff>=0.15.9",
    "werkzeug>=3.1.8",
]


[tool.ruff]
target-version = "py313"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "UP", "I"]

[tool.ruff.lint.per-file-ignores]
"**/migrations/*" = ["E501"]
