[project]
name = "piku_backend"
version = "0.1.0"
description = "Django Rest Framework for handling requests for Pi Ku app"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "apscheduler>=3.11.2",
    "boto3>=1.42.96",
    "django>=6.0.4",
    "django-apscheduler>=0.7.0",
    "django-cors-headers>=4.9.0",
    "django-environ>=0.13.0",
    "django-extensions>=4.1",
    "django-storages>=1.14.6",
    "django-structlog>=10.0.0",
    "djangorestframework>=3.17.1",
    "djangorestframework-simplejwt>=5.5.1",
    "djangorestframework-stubs>=3.16.9",
    "freezegun>=1.5.5",
    "gunicorn>=25.3.0",
    "psycopg2-binary>=2.9.11",
    "pyopenssl>=26.0.0",
    "rich>=15.0.0",
    "ruff>=0.15.9",
    "structlog>=25.5.0",
    "werkzeug>=3.1.8",
]


[tool.ruff]
target-version = "py313"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "UP", "I"]

[tool.ruff.lint.per-file-ignores]
"**/migrations/*" = ["E501"]
